Solved with css text-overflow: ellipse the problem of last message's length

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
     width: 55px;
     border-radius: 50%;
     overflow: hidden;
+    flex-shrink: 0;
 }
 .user-avatar img {
     height: 100%;
@@ -176,12 +177,15 @@ body {
     overflow-y: auto;
 }
 /* Single Contact */
-.contact-list .single-contact {
+.contact-list .single-contact {    
+    border-top: 1px solid #e9ebeb;
+    cursor: pointer;    
+}
+.contact-list .single-contact .contact-active-container {
     display: flex;
     padding: 12px 10px;
-    border-top: 1px solid #e9ebeb;
-    cursor: pointer;
     position: relative;
+    overflow-x: hidden;
 }
 .contact-list .single-contact:first-child {
     border-top: none;
@@ -194,14 +198,19 @@ body {
 }
 
 .contact-list .single-contact .user-names-text {
-    margin-left: 10px;
+    padding-left: 10px;
     font-size: 16px;
+    width: calc(100% - 65px);
 }
 .contact-list .single-contact .user-names-text .last-message {
     font-size: 12px;
     color: #bec0c3;
     font-weight: 400;
     margin-top: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
 .contact-list .single-contact .last-acces {
